GNOME Bugzilla – Bug 789935
Fix introspection data for gdk_pixbuf_new, gdk_pixbuf_copy and gdk_pixbuf_composite_color_simple
Last modified: 2018-04-25 14:57:42 UTC
Created attachment 363016 [details] [review] Fix introspection data for gdk_pixbuf_new, gdk_pixbuf_copy and gdk_pixbuf_composite_color_simple These can all return NULL, but this is not reflected in the introspection data (the documentation itself is OK).
Review of attachment 363016 [details] [review]: Thanks for the patch; it looks good.
Attachment 363016 [details] pushed as 3e8502a - Fix introspection data for gdk_pixbuf_new, gdk_pixbuf_copy and gdk_pixbuf_composite_color_simple