Fix introspection data for gdk_pixbuf_new, gdk_pixbuf_copy and gdk_pixbuf_composite_color_simple

https://bugzilla.gnome.org/show_bug.cgi?id=789935